Fixed bug #22017 (non descriptive error to appear when timestamp passed to date() has value < 0. Win32 does not support timestamps prior to midnight (00:00:00), January 1, 1970).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@114702 c90b9560-bf6c-de11-be94-00142212c4b1